--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     </dependencies>
 
     <build>
+        <finalName>loja</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
